--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -12,16 +12,14 @@ jobs:
 
       - name: install Carton
         shell: bash
-        run: |
-          rm -f cpanfile.snapshot
-          curl -sSL https://cpanmin.us | perl - -L local Carton
+        run: curl -sSL https://cpanmin.us | sudo perl - Carton
         working-directory: ./scripts/linux
 
       - name: carton install
         shell: bash
-        run: perl ./local/bin/carton install
-        env:
-          PERL5LIB: ${{ github.workspace }}/scripts/linux/local/lib/perl5
+        run: |
+          rm -f cpanfile.snapshot
+          carton install
         working-directory: ./scripts/linux
 
       - uses: actions/upload-artifact@v1
@@ -38,15 +36,14 @@ jobs:
       - name: install Carton
         shell: bash
         run: |
-          rm -f cpanfile.snapshot
-          curl -sSL https://cpanmin.us | perl - -L local Carton
+          curl -sSL https://cpanmin.us | sudo perl - Carton
         working-directory: ./scripts/darwin
 
       - name: carton install
         shell: bash
-        run: perl ./local/bin/carton install
-        env:
-          PERL5LIB: ${{ github.workspace }}/scripts/darwin/local/lib/perl5
+        run: |
+          rm -f cpanfile.snapshot
+          carton install
         working-directory: ./scripts/darwin
 
       - uses: actions/upload-artifact@v1
@@ -64,15 +61,17 @@ jobs:
 
       - name: Checkout
         uses: actions/checkout@v1
+      - run: rf -f scripts/windows/cpanfile.snapshot
+        shell: bash
 
       - name: install Carton
         shell: cmd
-        run: cpanm -L local Carton
+        run: cpanm Carton
         working-directory: ./scripts/windows
 
       - name: carton install
         shell: cmd
-        run: "perl .\\local\\bin\\carton install"
+        run: carton install
         env:
           PERL5LIB: ${{ github.workspace }}/scripts/windows/local/lib/perl5
         working-directory: ./scripts/windows
