--- a/.github/workflows/darwin.yml
+++ b/.github/workflows/darwin.yml
@@ -70,7 +70,7 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: setup host perl
-        run: perl -MConfig -E 'say "::add-path::$Config{bin}}"'
+        run: perl -MConfig -E 'say "::add-path::$Config{bin}"'
       - name: Host perl -V
         run: perl -V
       - name: gcc --version
