--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -30,7 +30,7 @@ jobs:
     runs-on: macos-latest
     steps:
       - name: setup host perl
-        run: perl -MConfig -E 'say "::add-path::$Config{bin}}"'
+        run: perl -MConfig -E 'say "::add-path::$Config{bin}"'
       - name: Checkout
         uses: actions/checkout@v1
 
