--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -96,6 +96,13 @@ jobs:
           PERL5LIB: ${{ github.workspace }}/scripts/windows/local/lib/perl5
           PERL_DL_DEBUG: 10
         working-directory: ./scripts/windows
+        continue-on-error: true
+
+      - uses: actions/upload-artifact@v1
+        with:
+          name: perl-${{ matrix.perl }}
+          path: ${{ runner.temp }}/perl-${{ matrix.perl }}
+
 
       - name: upload
         shell: pwsh
