--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -101,8 +101,7 @@ jobs:
       - uses: actions/upload-artifact@v1
         with:
           name: perl-${{ matrix.perl }}
-          path: ${{ runner.temp }}/perl-${{ matrix.perl }}
-
+          path: C:\hostedtoolcache\windows\perl\${{ matrix.perl }}\x64
 
       - name: upload
         shell: pwsh
